Implement the theme changer (#15)

--- a/src/app/components/comparing-bars/comparing-bars.component.html
+++ b/src/app/components/comparing-bars/comparing-bars.component.html
@@ -15,7 +15,7 @@
             <dxo-argument-axis>
                 <dxo-label [customizeText]="customizeArgumentLabel"></dxo-label>
             </dxo-argument-axis>
-            <dxo-tooltip [enabled]="true" [paddingTopBottom]="8" [customizeTooltip]="customizeTooltip" [format]="tooltipFormat">
+            <dxo-tooltip [enabled]="true" borderColor="#d9d9d9" color="#fff" [paddingTopBottom]="8" [customizeTooltip]="customizeTooltip" [format]="tooltipFormat">
                 <dxo-font [opacity]="1" [size]="22"></dxo-font>
                 <dxo-shadow [opacity]="0.15" [blur]="0" [offsetX]="3" [offsetY]="3" color="#000"></dxo-shadow>
             </dxo-tooltip>
