--- a/src/app/components/customers-grid/customers-grid.component.html
+++ b/src/app/components/customers-grid/customers-grid.component.html
@@ -1,4 +1,4 @@
-<dx-data-grid
+<dx-data-grid class="dx-theme-border-color"
     [dataSource]="gridDataSource"
     [showColumnLines]="false"
     [showRowLines]="false"
