--- a/src/app/components/products-grid/products-grid.component.html
+++ b/src/app/components/products-grid/products-grid.component.html
@@ -1,5 +1,5 @@
 <div class="data-grid">
-    <dx-data-grid 
+    <dx-data-grid class="dx-theme-border-color"
         [dataSource]="gridDataSource"
         [showColumnLines]="false"
         [showRowLines]="false"
