--- a/src/app/components/sales-by-range/sales-by-range.component.scss
+++ b/src/app/components/sales-by-range/sales-by-range.component.scss
@@ -7,7 +7,7 @@
 
     .title {
         font-size: 14px;
-        color: gray;
+        opacity: 0.6;
         font-weight: 400;
     }
 
@@ -45,7 +45,6 @@
 
         .year {
             font-size: 28px;
-            color: #252525;
             font-weight: 200;
         }
 
