--- a/src/app/views/dashboard/channels/channels.component.scss
+++ b/src/app/views/dashboard/channels/channels.component.scss
@@ -1,5 +1,5 @@
 .gray-line {
-    background: #f5f5f5;
+    background: rgba(150, 150, 150, 0.1);
 
     &.empty {
         height: calc(100vh - 1020px);
