--- a/src/app/components/help-popup/help-popup.component.scss
+++ b/src/app/components/help-popup/help-popup.component.scss
@@ -1,33 +1,15 @@
-$selectColor: #f05b41;
-$headerTextColor: #fff;
-$popupTextColor: #484747;
-
 a {
     text-decoration: none;
 }
 
-
-.popupButtons {
-    cursor: pointer;
-    background-color: $selectColor;
-    color: $headerTextColor;
-    padding: 10px 40px;
-    float: right;
-    margin-left: 10px;
-}
-
 .button {
     cursor: pointer;
-    background-color: $selectColor;
-    color: $headerTextColor;
-    padding: 10px 40px;
+    padding: 3px 20px;
+    border: none;
+    border-radius: 0;
     float: right;
     margin-left: 10px;
     user-select: none;
-}
-
-.select-text {
-    color: $selectColor;
 }
 
 .popup-content {
@@ -35,20 +17,16 @@ a {
 
 
     .popup-title {
+        font-family: 'Open Sans Condensed','HelveticaNeue-CondensedBold',Helvetica,'Arial Narrow',Calibri,Arial,'Lucida Grande',sans-serif;
+        font-size: 18px;
+        margin-top: 20px;
+        text-decoration: none;
         margin: 0 0 30px 0;
-        width: 191px;
-        height: 15px;
-        background: url(/assets/images/popup-title.png);
     }
 
     .popup-text {
         p {
             margin: 10px 0;
-            color: $popupTextColor;
-
-            a {
-                color: $popupTextColor;
-            }
         }
     }
 }
