--- a/src/app/components/legend/legend.component.scss
+++ b/src/app/components/legend/legend.component.scss
@@ -14,7 +14,7 @@
     }
 
     .field {
-        color: #808080;
+        opacity: 0.6;
         font-size: 14px;
         line-height: 18px;
     }
