--- a/src/app/components/products-chart/products-chart.component.html
+++ b/src/app/components/products-chart/products-chart.component.html
@@ -21,7 +21,7 @@
             [paddingLeftRight]="0"
             [paddingTopBottom]="0"
         >
-            <dxo-font color="#808080" [size]="12" [opacity]="1"></dxo-font>
+            <dxo-font [size]="12" [opacity]="0.6"></dxo-font>
         </dxo-legend>
         <dxo-tooltip [enabled]="true" color="#fff" [paddingTopBottom]="10" [customizeTooltip]="customizeTooltip">
             <dxo-border [visible]="false"></dxo-border>
