--- a/src/app/components/products-info/products-info.component.scss
+++ b/src/app/components/products-info/products-info.component.scss
@@ -2,7 +2,6 @@ h5 {
     font-size: 16px;
     font-weight: 400;
     margin-bottom: 0;
-    color: #252525;
 
     &.support {
         margin-top: 80px;
@@ -11,5 +10,5 @@ h5 {
 
 .plant-description {
     font-size: 14px;
-    color: gray;
+    opacity: 0.6;
 }
