--- a/src/app/views/products/products.component.scss
+++ b/src/app/views/products/products.component.scss
@@ -7,7 +7,7 @@
 }
 
 .gray-line {
-    background: #f5f5f5;
+    background: rgba(150, 150, 150, 0.1);
 
     .product-info {
         min-width: 800px;
