--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -49,7 +49,7 @@ dx-menu {
                 }
 
                 .menu-item {
-                    color: $textColor;
+                    color: $textColor !important;
                 }
             }
 
