--- a/src/app/components/daily-channels/daily-channels.component.html
+++ b/src/app/components/daily-channels/daily-channels.component.html
@@ -23,16 +23,18 @@
                 <dxi-pane>
                     <dxo-border [visible]="true"></dxo-border>
                 </dxi-pane>
-                <dxo-argument-axis [valueMarginsEnabled]="false" [placeholderSize]="25" argumantType="datetime">
+                <dxo-argument-axis [valueMarginsEnabled]="false" [placeholderSize]="25" argumentType="datetime" [visible]="false">
                     <dxo-grid [visible]="true"></dxo-grid>
+                    <dxo-tick [visible]="false"></dxo-tick>
                     <dxo-tick-interval [hours]="1"></dxo-tick-interval>
                     <dxo-minor-tick-interval [minutes]="30"></dxo-minor-tick-interval>
                     <dxo-minor-grid [visible]="true" [opacity]="1"></dxo-minor-grid>
                     <dxo-label overlappingBehavior="none" format="shorttime" [customizeText]="customizeLabel"></dxo-label>
                 </dxo-argument-axis>
-                <dxi-value-axis [placeholderSize]="40" valueType="numeric">
+                <dxi-value-axis [placeholderSize]="40" valueType="numeric" [visible]="false">
                     <dxo-grid [visible]="true"></dxo-grid>
                     <dxo-label format="thousands"></dxo-label>
+                    <dxo-tick [visible]="false"></dxo-tick>
                 </dxi-value-axis>
                 <dxo-common-series-settings type="line" argumentField="SaleDate"></dxo-common-series-settings>
                 <dxo-legend [visible]="false"></dxo-legend>
